--- a/turista-microservicio-dev.properties
+++ b/turista-microservicio-dev.properties
@@ -1,6 +1,6 @@
 server.port=5000
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/idat_microservicio
+spring.datasource.url=jdbc:mysql://localhost:3306/ec4_idat
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
